--- a/client/src/layout/index.module.css
+++ b/client/src/layout/index.module.css
@@ -4,7 +4,7 @@ body{
 
 .main{
     margin: 0;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
