--- a/client/src/layout/index.module.css
+++ b/client/src/layout/index.module.css
@@ -1,20 +1,35 @@
-body{
+body {
     margin: 0;
 }
 
-.main{
+.main {
     margin: 0;
     min-height: 100vh;
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 10fr 1fr;
+    grid-template-areas:
+      "header  header"
+      "content content"
+      "footer  footer";
 }
 
-.article{
-    height: 100%;
+.header {
+    grid-area: header;
+    min-height: 100%;
+}
+
+.article {
+    min-height: 100%;
     max-width: 100%;
+    grid-area: content;
 }
 
-.footer{
-    margin-top: auto;
+.footer {
+    /* margin-top: auto; */
+    grid-area: footer;
+    height: 100%;
 }
