--- a/client/src/layout/index.module.css
+++ b/client/src/layout/index.module.css
@@ -5,7 +5,8 @@ body {
 .main {
     margin: 0;
     min-height: 100vh;
-    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
     /* display: flex;
     flex-direction: column; */
     display: grid;
